// Copyright 2020 The Chromium Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package recipe_modules.build.pgo;

message InputProperties {
  // Determines whether to run the .profdata merge script from PGO.
  // This flag differs from use_clang_coverage because PGO only performs a
  // merge + upload.
  bool use_pgo = 1;
}
